--- a/_site.yml
+++ b/_site.yml
@@ -5,7 +5,7 @@ navbar:
   left:
   - text: "Home"
     href: index.html
-  - text: "About"
+  - text: "EDS"
     href: about.html
   - text: "Projects"
     href: projects.html
