--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@
 baseurl = "https://www.alectrusty.com/"
 
 # Title of your site
-title = "Alec Trusty"
+title = "{ Alec Trusty }"
 
 # Your copyright notice - appears in site footer.
 # To display a copyright symbol, type `&copy;`.
