--- a/config.toml
+++ b/config.toml
@@ -287,10 +287,10 @@ enableGitInfo = false
 #  url = "#publications_selected"
 #  weight = 2
 
-[[menu.main]]
-  name = "Blog"
-  url = "#posts"
-  weight = 3
+#[[menu.main]]
+#  name = "Blog"
+#  url = "#posts"
+#  weight = 3
 
 [[menu.main]]
   name = "Projects"
