--- a/config.toml
+++ b/config.toml
@@ -59,7 +59,7 @@ enableGitInfo = false
   organizations = [ { name = "GIS | Data Science | Web Mapping", url = "" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
-  avatar = "profile.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
+  avatar = "alguat.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
   
   # Details for the Contact Widget
   email = "a.e.trusty@gmail.com"
@@ -99,7 +99,7 @@ enableGitInfo = false
 
   # Color theme.
   #   Choose from `default`, `ocean`, `forest`, `coffee`, `dark`, or `1950s`.
-  color_theme = "dark"
+  color_theme = "custom_dark"
 
   # Font style.
   #   Choose from `default`, `classic`, or `playfair`.
