--- a/config.toml
+++ b/config.toml
@@ -99,7 +99,7 @@ enableGitInfo = false
 
   # Color theme.
   #   Choose from `default`, `ocean`, `forest`, `coffee`, `dark`, or `1950s`.
-  color_theme = "custom_dark"
+  color_theme = "custom_light2"
 
   # Font style.
   #   Choose from `default`, `classic`, or `playfair`.
