--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 theme = "researcher"
-#baseURL = "https://alectrusty.github.io/"
+baseURL = "alectrusty.github.io"
 languageCode = "en-us"
 title = "alec trusty"
 #publishDir = ".."
